[package]
name = "neko"
version = "0.4.0"
authors = ["alihsaas <alihsaas2@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
structopt = "0.3.21"
rustyline = "8.2.0"
rustyline-derive = "0.4.0"
ansi_term = "0.12.1"
built = { version = "0.5.0", features = ["git2", "chrono"] }

[build-dependencies]
built = "0.5.0"